--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,7 @@
 		{% endif %}
 	</head>
 	<body>
+		<!-- Nav Bar -->
 		<header class="site-header">
 			<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
 				<div class="container">
@@ -34,11 +35,14 @@
 				</div>
 			</nav>
 		</header>
+		<!-- Main -->
 		<main role="main" class="container">
 			<div class="row">
+				<!-- Page Content -->
 				<div class="col-md-8">
 					{% block content %}{% endblock %}
 				</div>
+				<!-- Sidebar -->
 				<div class="col-md-4">
 					<div class="content-section">
 						<h3>Our Sidebar</h3>
