--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -40,12 +40,19 @@
 			<div class="row">
 				<!-- Page Content -->
 				<div class="col-md-8">
+					{% if messages %}
+						{% for message in messages %}
+							<div class="alert alert-{{message.tags}}">
+								{{message}}
+							</div>
+						{% endfor %}
+					{% endif %}
 					{% block content %}{% endblock %}
 				</div>
 				<!-- Sidebar -->
 				<div class="col-md-4">
 					<div class="content-section">
-						<h3>Our Sidebar</h3>
+						<h3>Sidebar</h3>
 						<p class='text-muted'>You can put any information here you'd like.
 							<ul class="list-group">
 								<li class="list-group-item list-group-item-light">Latest Posts</li>
