--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
+	<h4 class="article-content">About me</h4>
 	<p class="article-content">
 		I'm a second year Information Systems graduate student at Northeastern University. I have been looking for a co-op job for two months and have had no luck so far. Now that the summer break has begun, apart from practicing the leetcode problems, I decided to learn something new such as Django, Flask, SQL and ASP.NET. <br><br>
 		This is my very first experience with Django. I started it on May 1st, 2019 and completed all the basic functions and get it deployed on May 10th, 2019. I also did a Flask version of it. <br><br>
