--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,7 +3,7 @@
 	<h4 class="article-content">About me</h4>
 	<p class="article-content">
 		I'm a second year Information Systems graduate student at Northeastern University. I have been looking for a co-op job for two months and have had no luck so far. Now that the summer break has begun, apart from practicing the leetcode problems, I decided to learn something new such as Django, Flask, SQL and ASP.NET. <br>
-		This was my very first experience with Django. I started it on May 1st, 2019 and completed all the basic functions and get it deployed on May 10th, 2019. I also did a Flask version of it. <br>
+		This was my very first experience with Django. I started it on May 1st, 2019, completed all the basic functions on May 10th, 2019, and finally got it deployed on May 15th, 2019. I also did a Flask version of it. <br>
 		I want to express my gratitude to Corey Schafer, who has been posting awesome Python related tutorials in his Youtube channel. They have been very helpful to me. <br>
 		- May 15th, 2019
 	</p>
